<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Telas.Nome_E_Cla">

    <TextView
        android:id="@+id/lbl_Inserir_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/hint_name_and_cla"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Inserir_Nome" />

    <EditText
        android:id="@+id/txt_Nome"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Nome" />

    <TextView
        android:id="@+id/lbl_Cla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/cla"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nome" />

    <EditText
        android:id="@+id/txt_Cla"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Cla" />

    <Button
        android:id="@+id/btn_Nome_Cla_Proximo"
        android:layout_width="350dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_button"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_Salvar_Nome_Cla" />

    <CheckBox
        android:id="@+id/chb_Salvar_Nome_Cla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_name_and_cla"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Cla" />

    <TextView
        android:id="@+id/lbl_Patente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/level_rank"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toEndOf="@+id/txt_Nome"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Inserir_Nome" />

    <Spinner
        android:id="@+id/spn_Patente"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/txt_Nome"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Patente" />

</android.support.constraint.ConstraintLayout>