<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cst_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".telas.MainActivity">

    <Button
        android:id="@+id/btn_Create_Banner"
        android:layout_width="185dp"
        android:layout_height="88dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button"
        android:text="@string/create_banner"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_WF_World"
        android:layout_width="110dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_button"
        android:text="@string/wf_world"
        android:textColor="@color/colorText"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_Flappy_Doge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Flappy_Doge"
        android:layout_width="110dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_button"
        android:text="@string/flappy_doge"
        android:textColor="@color/colorText"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_WF_World" />
</android.support.constraint.ConstraintLayout>