<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".telas.Fita_Marca_Insignia">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rcv_Conquista"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_Marca"
            android:layout_width="80dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/marca"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toStartOf="@+id/btn_Insignia"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Insignia"
            android:layout_width="90dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/insignia"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toStartOf="@+id/btn_fita"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_Marca"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_fita"
            android:layout_width="90dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_button"
            android:text="@string/fita"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_Insignia"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_fita"
            android:layout_width="280dp"
            android:layout_height="95dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Marca"
            app:srcCompat="@drawable/m16" />

        <ImageView
            android:id="@+id/img_Insignia"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="@+id/img_Marca"
            app:layout_constraintTop_toTopOf="@+id/img_fita"
            app:srcCompat="@drawable/insignia_fostech" />

        <ImageView
            android:id="@+id/img_Marca"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_fita"
            app:srcCompat="@drawable/marca_17" />

        <TextView
            android:id="@+id/txt_Cla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textColor="@color/colorCla"
            app:layout_constraintStart_toEndOf="@+id/img_Patente"
            app:layout_constraintTop_toTopOf="@+id/img_fita" />

        <ImageView
            android:id="@+id/img_Patente"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toEndOf="@+id/img_Insignia"
            app:layout_constraintTop_toTopOf="@+id/img_fita"
            app:srcCompat="@drawable/rank90" />

        <TextView
            android:id="@+id/txt_Nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorNome"
            app:layout_constraintStart_toEndOf="@+id/img_Patente"
            app:layout_constraintTop_toBottomOf="@+id/txt_Cla" />

        <Button
            android:id="@+id/btn_Proximo"
            android:layout_width="240dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_button"
            android:text="@string/next"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_fita" />


    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_Conquista"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>